# teammate-sync

./: .gitignore  ARCHITECTURE.md  INSTALL.md  PONYTAIL_REVIEW.md  README.md  backend.py  cli.py  daemon.py  hook.py  install.sh  pyproject.toml  requirements.txt  server.py  share-cli.py  start-daemon.sh  teammate-sync
backend/: Dockerfile  SETUP.md  fly.toml  main.py  requirements.txt  storage.py
cloud/: bootstrap-vm.sh  destroy-test-vm.py  launch-saketh-vm.py  launch-test-vm.py
commands/: README.md
desktop/: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js
desktop/assets/: icon.icns
desktop/scripts/: bundle-python.sh
docs/: docs.html  index.html  llms.txt  robots.txt  site.webmanifest  sitemap.xml
example_data/: CLAUDE.md  scratch-notes.md  session-abc123.jsonl
landing/: index.html
teammate_sync/: aliases.py  auth.py  backend.py  claude_oauth.py  cli.py  daemon.py  dashboard.py  distiller.py  federated.py  hook.py  macapp.py  projects.py  server.py  share_cli.py
