[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teammate-sync"
version = "0.1.0"
description = "Cross-engineer Claude Code context sharing — type /share, your teammate queries your context."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Om Divyatej", email = "om@turgon.ai" },
]
keywords = ["claude", "claude-code", "mcp", "team", "context", "sharing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "watchdog>=4.0.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://omdivyatej.github.io/teammate-sync-site/"
Source = "https://github.com/omdivyatej/teammate-sync"

[project.scripts]
# `pip install` puts this on the user's PATH. All functionality is reachable
# via subcommands: init, daemon, share, unshare, shared, whoami, teammates,
# install-commands, logout.
teammate-sync = "teammate_sync.cli:main"

[tool.setuptools]
# Single flat module layout under teammate_sync/.
packages = ["teammate_sync"]

[tool.setuptools.package-dir]
teammate_sync = "teammate_sync"
